--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "js-datepicker": "^5.4.0",
     "mysql2": "^1.6.6",
     "sequelize": "^5.21.5"
   },
