--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-sessions": "^1.0.6",
     "js-datepicker": "^5.4.0",
+    "morgan": "^1.10.0",
     "mysql2": "^1.6.6",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
@@ -25,7 +32,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "mocha": "^7.1.0",
+    "mocha": "^7.1.1",
     "prettier": "^1.17.1"
   }
 }
