--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": "Bmi2Kgne7ZV3xejqsz",
-    "database": "exampledb",
+    "username": "bill",
+    "password": "123456",
+    "database": "dev_db",
     "host": "localhost",
     "dialect": "mysql"
   },
