--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "bill",
-    "password": "123456",
+    "username": "root",
+    "password": "Bmi2Kgne7ZV3xejqsz",
     "database": "dev_db",
     "host": "localhost",
     "dialect": "mysql"
