--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^1.6.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^7.1.1",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "sequelize-cli": "^5.5.1"
   }
 }
